--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,22 @@
         "zendframework/zend-component-installer": "^1.0 || ^2.1",
         "zendframework/zend-mvc": "^3.1.1",
         "zfcampus/zf-development-mode": "^3.2",
-        "zendframework/zend-db": "^2.11"
+        "zendframework/zend-db": "^2.11",
+        "zendframework/zend-cache": "^2.7",
+        "zendframework/zend-mvc-form": "^1.0",
+        "zendframework/zend-json": "^3.0",
+        "zendframework/zend-mvc-console": "^1.1",
+        "zendframework/zend-mvc-i18n": "^1.0",
+        "zendframework/zend-mvc-plugins": "^1.0",
+        "zendframework/zend-session": "^2.8",
+        "zendframework/zend-servicemanager-di": "^1.1",
+        "zendframework/zend-mail": "^2.8",
+        "zendframework/zend-authentication": "^2.5",
+        "zendframework/zend-hydrator": "^2.3",
+        "zendframework/zend-math": "^3.0",
+        "zendframework/zend-crypt": "^3.2",
+        "zendframework/zend-paginator": "^2.8",
+        "zendframework/zend-i18n-resources": "^2.5"
     },
     "autoload": {
         "psr-4": {
